--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "styled-jsx": "^5.1.2",
     "tailwind": "^4.0.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "yup": "^1.3.2"
   }
 }
