--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/styled": "^11.11.0",
     "@reduxjs/toolkit": "^1.9.7",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
@@ -22,14 +23,20 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "react-image-magnifiers": "^1.4.0",
     "react-paginate": "^8.2.0",
+    "react-player": "^2.13.0",
     "react-redux": "^8.1.2",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
+    "react-youtube": "^10.1.0",
     "styled-jsx": "^5.1.2",
     "tailwind": "^4.0.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "yup": "^1.3.2"
+  },
+  "devDependencies": {
+    "@types/react-image-magnifiers": "^1.3.4"
   }
 }
